--- a/templates/config.html
+++ b/templates/config.html
@@ -5,7 +5,7 @@
         <div class="col-xs-4">
         </div>
         <div class="col-xs-4">
-            <h2 class="text-center bg-primary">Configuration</h2>
+            <h2 class="text-center bg-info">Configuration</h2>
         </div>
         <div class="col-xs-4">
         </div>
