--- a/templates/status.html
+++ b/templates/status.html
@@ -5,7 +5,7 @@
         <div class="col-xs-4">
         </div>
         <div class="col-xs-4">
-            <h2 class="text-center bg-primary">Status</h2>
+            <h2 class="text-center bg-info">Status</h2>
         </div>
         <div class="col-xs-4">
         </div>
