--- a/wanem_app/templates/main.html
+++ b/wanem_app/templates/main.html
@@ -27,7 +27,7 @@
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="{{ active.status }}"><a href="{{ url_for('status') }}">Status</a></li>
-                    <li class="{{ active.config }}"><a href="{{ url_for('config', br='all') }}">Config</a></li>
+                    <li class="{{ active.config }}"><a href="{{ url_for('config') }}">Config</a></li>
                 </ul>
             </div>
         </nav>
