--- a/wanem_app/templates/config_bridge.html
+++ b/wanem_app/templates/config_bridge.html
@@ -3,38 +3,38 @@
     <div class="row">
         <div class="col-xs-12">
             <h3 class="text-center bg-info">Bridge {{ bridge }} Configuration</h3>
-            <form>
+            <form action="" method="post">
+                {{ form.csrf_token }}
                 <div class="col-xs-12">
                     <h4 class="text-center">Delay Configuration</h4>
                 </div>
                 <div class="col-xs-4 form-group">
-                    <label for="InputMeanDelay">Mean Delay (ms)</label>
-                    <input type="number" class="form-control" id="InputMeanDelay" placeholder="Mean Delay">
+                    <label for="InputMeanDelay">{{ form.InputMeanDelay.label }}</label>
+                    <input type="{{ form.InputMeanDelay.type }}" class="form-control" id="InputMeanDelay" name="InputMeanDelay" placeholder="Mean Delay">
                 </div>
                 <div class="col-xs-4 form-group">
-                    <label for="InputStdDev">Standard Deviation (ms)</label>
-                    <input type="number" class="form-control" id="InputStdDev" placeholder="Standard Deviation">
+                    <label for="InputStdDev">{{ form.InputStdDev.label }}</label>
+                    <input type="{{ form.InputStdDev.type }}" class="form-control" id="InputStdDev" name="InputStdDev" placeholder="Standard Deviation">
                 </div>
                 <div class="col-xs-4 form-group">
-                    <label for="InputDelayCorrelation">Delay Correlation (%)</label>
-                    <input type="number" class="form-control" id="InputDelayCorrelation" placeholder="Delay Correlation">
+                    <label for="InputDelayCorrelation">{{ form.InputDelayCorrelation.label }}</label>
+                    <input type="{{ form.InputDelayCorrelation.type }}" class="form-control" id="InputDelayCorrelation" name="InputDelayCorrelation" placeholder="Delay Correlation">
                 </div>
                 <div class="col-xs-12">
                     <h4 class="text-center">Packet Loss Configuration</h4>
                 </div>
                 <div class="col-xs-4 form-group">
-                    <label for="InputPktLoss">Packet Loss (%)</label>
-                    <input type="number" class="form-control" id="InputPktLoss" placeholder="Packet Loss">
+                    <label for="InputPktLoss">{{ form.InputPktLoss.label }}</label>
+                    <input type="{{ form.InputPktLoss.type }}" class="form-control" id="InputPktLoss" name="InputPktLoss" placeholder="Packet Loss">
                 </div>
                 <div class="col-xs-4 form-group">
-                    <label for="InputPktLossCorrelation">Packet Loss Correlation (%)</label>
-                    <input type="number" class="form-control" id="InputPktLossCorrelation" placeholder="Packet Loss Correlation">
+                    <label for="InputPktLossCorrelation">{{ form.InputPktLossCorrelation.label }}</label>
+                    <input type="{{ form.InputPktLossCorrelation.type }}" class="form-control" id="InputPktLossCorrelation" name="InputPktLossCorrelation" placeholder="Packet Loss Correlation">
                 </div>
                 <div class="col-xs-12">
                     <hr>
                     <button type="submit" class="btn btn-default">Bridge Config</button>
                 </div>
-
             </form>
         </div>
     </div>
