--- a/wanem_app/templates/config_bridge.html
+++ b/wanem_app/templates/config_bridge.html
@@ -6,6 +6,18 @@
             <form action="" method="post">
                 {{ form.csrf_token }}
                 <div class="col-xs-12">
+                    <div class="panel panel-warning">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Note:</h3>
+                        </div>
+                        <div class="panel-body">
+                            This Wan Emulator support symmetric Bandwidth on the link and the values
+                            configured will be equally splitted between the two interfaces forming the Bridge except for the correlation and burst,
+                            i.e. configuring 100 ms delay in Br0 will actually configure 50ms on each interface that configure the bridge
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12">
                     <h4 class="text-center">Bandwidth Configuration</h4>
                 </div>
                 <div class="col-xs-4 form-group">
