Added Reset Configuration Button to clear configuration on interfaces

--- a/wanem_app/templates/main.html
+++ b/wanem_app/templates/main.html
@@ -28,6 +28,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="{{ active.status }}"><a href="{{ url_for('status') }}">Status</a></li>
                     <li class="{{ active.config }}"><a href="{{ url_for('config') }}">Config</a></li>
+                    <li class="bg-danger"><a href="{{ url_for('reset') }}">Reset</a></li>
                 </ul>
             </div>
         </nav>
